overlay - making sure address appears correctly, adding spacing between form fields on small screens

--- a/src/stylus/venues-overlay.styl
+++ b/src/stylus/venues-overlay.styl
@@ -96,7 +96,7 @@
 
 .venues-voucher
   .form-row
-    padding 0 20px
+    padding 10px 20px
 
     @media smallDesktopsAndUp
       padding 10px 60px
@@ -182,6 +182,7 @@
 .venues-overlay__social
   font-size 17px
   margin-bottom 32px
+  overflow hidden
 
 .venues-overlay__social__item
   display block
@@ -204,6 +205,10 @@
   width 100%
   line-height 30px
   -webkit-mask-image -webkit-gradient(linear, 90% top, right top, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
+
+.venues-overlay__social__item span
+  width 90%
+  height auto
 
 .venues-closest
   background white
